# sblim-cmpi-params

./: Makefile  README.md  sblim-cmpi-params.spec
src/: ChangeLog  Linux_ABIParameter.c  Linux_FileSystemParameter.c  Linux_KernelParameter.c  Linux_NetworkCoreParameter.c  Linux_NetworkIPv4Parameter.c  Linux_NetworkUnixParameter.c  Linux_VirtualMemoryParameter.c  Makefile.am  Makefile.in  NEWS  README  README.TEST  README.tog-pegasus  TEMPLATE.c  acinclude.m4  config.h.in  configure  configure.ac  create_files  kernel-params  provider-register.sh  sblim-cmpi-params.rh.spec  sblim-cmpi-params.spec  sblim-cmpi-params.spec.in
src/mof/: Linux_ABIParameter.mof  Linux_ABIParameter.registration  Linux_FileSystemParameter.mof  Linux_FileSystemParameter.registration  Linux_KernelParameter.mof  Linux_KernelParameter.registration  Linux_NetworkCoreParameter.mof  Linux_NetworkCoreParameter.registration  Linux_NetworkIPv4Parameter.mof  Linux_NetworkIPv4Parameter.registration  Linux_NetworkUnixParameter.mof  Linux_NetworkUnixParameter.registration  Linux_VirtualMemoryParameter.mof  Linux_VirtualMemoryParameter.registration  REGISTRATION.registration  TEMPLATE.mof
src/test/: sblim-cmpi-params-test.sh
src/test/cim/: Linux_ABIParameter.cim  Linux_FileSystemParameter.cim  Linux_KernelParameter.cim  Linux_NetworkCoreParameter.cim  Linux_NetworkIPv4Parameter.cim  Linux_NetworkUnixParameter.cim  Linux_VirtualMemoryParameter.cim
src/test/system/linux/: Linux_ABIParameter.sh  Linux_ABIParameter.system  Linux_FileSystemParameter.sh  Linux_FileSystemParameter.system  Linux_KernelParameter.sh  Linux_KernelParameter.system  Linux_NetworkCoreParameter.sh  Linux_NetworkCoreParameter.system  Linux_NetworkIPv4Parameter.sh  Linux_NetworkIPv4Parameter.system  Linux_NetworkUnixParameter.sh  Linux_NetworkUnixParameter.system  Linux_VirtualMemoryParameter.sh  Linux_VirtualMemoryParameter.system
